--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ inflection==0.5.1
 oauthlib==3.3.1
 packaging==25.0
 pillow==11.3.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 python-decouple==3.8
